# tts-sidecar

./: .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SOURCE-OFFER.md  THIRD-PARTY-LICENSES.md  USAGE.md  install-linux.sh  install-macos.sh  install-windows.ps1  install.ps1  install.sh  package.json  pyproject.toml  requirements-lock-build.txt  requirements-lock-linux-cpu.txt  requirements-lock.txt  requirements.txt
.circleci/: config.yml
docs/: ARCHITECTURE.md  BUILD.md  Build-with-CICD.md  CLAUDE-CODE-PLUGIN.md  DAEMON-MODE.md  DESIGN.md  DISTRIBUTION.md  GOAL.md  NARRATION-INTEGRATION.md  PARITY.md  PRODUCTION-READINESS-AUDIT.md  PROJECT-REVIEW.md  RELEASING.md  ROADMAP.md  SELF-HOSTED-INSTALL.md  daemon-mode.md  design.md  goal.md
docs/external-references/: ejemplo-de-distribución-multiplataforma.md
scripts/: build_linux.py  build_macos.py  build_utils.py  build_windows.py  check_coverage.py  check_third_party_licenses.py  clean_build.py  create_agents_reference.py  create_installer_windows.py  pyinstaller_wrapper.py  render_cask.py  tts-sidecar.yml
src/chatterbox_tts/: __init__.py  audio.py  cli.py  engine.py  model_cache.py  paths.py  timing.py  voices.py
src/chatterbox_tts/daemon/: __init__.py  daemon.py  ipc.py  protocol.py  run.py  server.py
src/tts_sidecar/: __init__.py  __main__.py  audio.py  audio_writer.py  bootstrap.py  cli.py  compute_backend.py  conditionals.py  engine.py  exceptions.py  model_cache.py  model_loader.py  paths.py  synthesis.py  timing.py  voices.py
src/tts_sidecar/daemon/: __init__.py  daemon.py  ipc.py  protocol.py  run.py  server.py
tests/: conftest.py  test_audio.py  test_audio_platform.py  test_audio_writer.py  test_build_linux.py  test_build_macos.py  test_build_utils.py  test_build_windows.py  test_cask.py  test_ci_smoke.py  test_cli.py  test_compute_backend.py  test_conditionals.py  test_create_installer_windows.py  test_daemon.py  test_daemon_run.py  test_daemon_sandbox.py  test_engine_cache.py  test_engine_progress.py  test_engine_voices.py  test_model_cache.py  test_model_loader.py  test_paths.py  test_pin_consistency.py  test_protocol.py  test_synthesis_orchestrator.py  test_third_party_licenses.py  test_timing.py  test_voices.py
tests/installer/: install-linux.bats  install-macos.bats  install-windows.tests.ps1  install.bats  install.tests.ps1
