[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-sidecar"
version = "0.1.0"
description = "Chatterbox TTS - 100% local voice cloning TTS"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

# Fuente única de las dependencias de runtime. requirements.txt es un espejo
# para desarrollo/CI que además incluye las herramientas de build.
dependencies = [
    "chatterbox-tts>=0.1.7",
    "sounddevice>=0.4.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pycaw>=20240210; sys_platform == 'win32'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
