[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-sidecar"
dynamic = ["version"]
description = "TTS Sidecar - 100% local voice cloning TTS (Chatterbox Multilingual)"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["tts", "text-to-speech", "voice-cloning", "chatterbox", "offline", "español"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Environment :: Console",
]

# Fuente única de las dependencias de runtime. requirements.txt es un espejo
# para desarrollo/CI que además incluye las herramientas de build.
dependencies = [
    "chatterbox-tts>=0.1.7",
    "sounddevice>=0.4.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pycaw>=20240210; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/CristianRojas-SoftwareEngineer/TTS-Sidecar"
Repository = "https://github.com/CristianRojas-SoftwareEngineer/TTS-Sidecar"
Changelog = "https://github.com/CristianRojas-SoftwareEngineer/TTS-Sidecar/blob/main/CHANGELOG.md"

[project.scripts]
tts-sidecar = "tts_sidecar.cli:main"

[tool.setuptools.dynamic]
version = {attr = "tts_sidecar.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tts_sidecar = ["voices/**/*.wav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
