[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-sidecar"
dynamic = ["version"]
description = "TTS Sidecar - 100% local voice cloning TTS (Chatterbox Multilingual)"
readme = "README.md"
authors = [{ name = "Cristián Rojas Arredondo" }]
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
# Además de LICENSE: la oferta de fuente GPLv3 §6 y las atribuciones de
# terceros deben viajar también en el canal PyPI (wheel y sdist).
license-files = ["LICENSE", "SOURCE-OFFER.md", "THIRD-PARTY-LICENSES.md"]
keywords = ["tts", "text-to-speech", "voice-cloning", "chatterbox", "offline", "español"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Environment :: Console",
]

# Fuente única de las dependencias de runtime. requirements.txt es un espejo
# para desarrollo/CI que además incluye las herramientas de build.
dependencies = [
    "chatterbox-tts>=0.1.7",
    # numba (vía librosa) tope <2.5; chatterbox-tts declara numpy>=2.0.0 sin
    # tope superior, lo que deja a resolvedores agresivos (uv) fijar numpy en
    # su última versión y retroceder numba hasta releases sin soporte 3.13.
    "numpy<2.5",
    "sounddevice>=0.4.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pycaw>=20240210; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/CristianRojas-SoftwareEngineer/TTS-Sidecar"
Repository = "https://github.com/CristianRojas-SoftwareEngineer/TTS-Sidecar"
Changelog = "https://github.com/CristianRojas-SoftwareEngineer/TTS-Sidecar/blob/main/CHANGELOG.md"

[project.scripts]
tts-sidecar = "tts_sidecar.cli:main"

[tool.setuptools.dynamic]
version = {attr = "tts_sidecar.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tts_sidecar = ["voices/**/*.wav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage es opt-in: no va en addopts para que `pytest tests/ -v`
# siga funcionando sin pytest-cov instalado. El job `coverage` de CI lo activa
# explícitamente con `--cov --cov-report=xml --cov-report=json`; el gate por
# módulo lo aplica scripts/check_coverage.py (coverage.py solo ofrece un
# fail_under global, insuficiente para diferenciar módulos de contrato).
[tool.coverage.run]
source = ["tts_sidecar"]
branch = true
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    # Ramas por-SO estructuralmente inalcanzables desde un runner Linux (el
    # job `coverage` corre en cimg/python Docker, x86_64 Linux).
    "sys.platform == .win32.",
    "sys.platform == .darwin.",
]

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.xml]
output = "coverage.xml"
